fixed flicker effect from skeleton loaders

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ button:hover{
   background-color: #6dd5a6;
 }
 
+.content-loader{
+  /* border: 1px solid; */
+}
+
 @keyframes slide{
   from{
       transform: translateY(-10px);
